GAMS Transfer R
==================
- Breaking: Symbol name uniqueness is now checked case insensitively. For
  example, it is not possible to have two different symbols named
  `symbol` and `Symbol` or `SYMBOL` anymore
- Added a method `Container$getSymbolNames` to return the original symbol names
  for a list of symbol names of any case
- Added a method `Container$hasSymbols` to check if symbol name (case insensitive)
  exists
- Changed `Container$getSymbols`, `Container$removeSymbols`,
  `Container$renameSymbol`, `Container$describe*` and others that use
  `Container$getSymbols` to accept symbol names case insensitively
- New Symbol methods `hasDuplicateRecords`, `countDuplicateRecords`, `findDuplicateRecords`, and `dropDuplicateRecords` to help debug and resolve errors with duplicate records
- New Container methods `hasDuplicateRecords`, `countDuplicateRecords`, and `dropDuplicateRecords` to help find symbols that contain duplicate records that cause the Symbol to be invalid

GAMS Transfer R v1.0.0
==================
- added a new class ConstContainer for efficient data transfer
- allow read from Container/ConstContainer into another Container
- bug fix in listSets function that used to also list Aliases
- updated default_values in the Equation class
- updated Symbol isValid() method to check for levels of the linked domain set and symbol records
- bug fix in setting factor levels for subsets of subsets
- bug fix in countEPS method
- fixed record setter using non-dataframe object types for variables, equations, and parameters

GAMS Transfer R v0.2.0
==================
- released binary packages on Windows and MacOS
- bug fixes and improvements

GAMS Transfer R v0.1.0
==================
- first release